<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:background="@color/main_backround">

    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/almost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/almost"
        android:text="@string/afteralmost"
        android:textColor="@color/white"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/main_backround"
        android:orientation="horizontal"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/veri"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/veri"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

