<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_backround"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

            <TextView
                android:id="@+id/verify"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="34sp"/>
        <TextView
            android:id="@+id/deskripsi"
            android:gravity="center"
            android:layout_marginTop="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aftervery"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/main_backround"
            android:orientation="vertical"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <EditText
                android:gravity="center"
                style="@style/EdtWhiteFour16"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:autofillHints="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/code"
                android:inputType="number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_button"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/veryacc"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kirim"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doesnt Get Code?"
                    android:textColor="@color/white"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="btnRegister"
                    android:text="Resend"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>